fix: width issue on smaller resolution

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,8 +9,8 @@
 	}
 	html,
 	body {
-		height: 100vh;
-		width: 100vw;
+		height: 100%;
+		width: 100%;
 	}
 }
 
